workspaces/DC Dev/DC Dev/src/objects/UFHT__Ultra_Track_Container__c.object
<CustomObject>
    <fields>
        <fullName>UFHT__DateHolder__c</fullName>
        <label>DateHolder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UFHT__Is_Tracking_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tracking Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UFHT__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UFHT__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UFHT__Tracked_Fields__c</fullName>
        <label>Tracked Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Ultra Track Container</label>
    <listViews>
        <fullName>UFHT__All</fullName>
        <columns>NAME</columns>
        <columns>UFHT__Object_Name__c</columns>
        <columns>UFHT__Is_Tracking_Enabled__c</columns>
        <columns>UFHT__Object_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UTC-{00}</displayFormat>
        <label>Ultra Track Container Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ultra Track Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>